# pyapp

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: .ash_history  main.py
app/lib/: settings.py
